@@ -140,22 +140,7 @@ function setup_logging {
 # Log <command> & its output.  Return <command>'s exit value.
 function log {
 	[[ -z "$*" ]] && usage_error "log" "<command>"
-
-	local -i retval
-
-	# Start logging.
-	[[ -n "$logfile" ]] && eval "exec 3>&1 4>&2 $log_target"
-	set -x
-
-	# Run <command>.
-	"$@"
-	retval=$?
-
-	# Stop logging.
-	set +x
-	[[ -n "$logfile" ]] && exec 1>&3 2>&4 3>&- 4>&-
-
-	return $retval
+	eval "( set -x; \"\$@\" ) $log_target"
 }
 
 # ---------------------------- VERSION REPORTING ----------------------------- #
