@@ -1,3 +1,7 @@
+2004-07-31 Gareth Jones <gareth_jones@users.berlios.de>
+
+	* src/libprometheus.bash.in (log): Much simplified, nicer output.
+
 2004-07-30 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* src/libprometheus.bash.in (list_files): Removed references to
